# RiboSeek

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
examples/: README.md  quickstart.py
src/riboseek/: __init__.py  align.py  alphabet.py  cli.py  features.py  prefilter.py  search.py
src/riboseek/_native/: nw_align.c
src/riboseek/data/: demo_db.json  sa20.npz
tests/: test_smoke.py
